--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=unifeob@123
 DB_NAME=ecojourney
 JWT_SECRET=S1z$8kP&J9t@3Lg#Nz5!rB7vXm
 PORT=4040
+GEMINI_API_KEY=AIzaSyC-wXzvd4K-8_W0XNjamd_f1y_j9CY4Kdk
