Implementação do envio do prompt do usuário para a API do Gemini

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=unifeob@123
+DB_PASSWORD=
 DB_NAME=ecojourney
 JWT_SECRET=S1z$8kP&J9t@3Lg#Nz5!rB7vXm
 PORT=4040
