--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=unifeob@123
 DB_NAME=ecojourney_test
-JWT_SECRET=test123
+JWT_SECRET=S1z$8kP&J9t@3Lg#Nz5!rB7vXmafdfsdf
