Realização dos testes de segurança no backend

--- a/.env.test
+++ b/.env.test
@@ -2,4 +2,4 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=ecojourney_test
-JWT_SECRET=S1z$8kP&J9t@3Lg#Nz5!rB7vXmafdfsdf
+JWT_SECRET=S1z$8kP&J9t@3Lg#Nz5!rB7vXm
